--- a/src/android/UniNotifier_ru_ru.resx
+++ b/src/android/UniNotifier_ru_ru.resx
@@ -151,7 +151,7 @@
     <value>Просмотр</value>
   </data>
   <data name="AvailabilityLabel" xml:space="preserve">
-    <value>Оповещать, если ресурс недоступен</value>
+    <value>Оповещать, если ресурс недоступен *</value>
   </data>
   <data name="BackgroundRequestInProgress" xml:space="preserve">
     <value>Пожалуйста, дождитесь ответа всех оповещений...</value>
@@ -172,10 +172,10 @@
     <value>Выберите сообщество:</value>
   </data>
   <data name="ComparatorLabel" xml:space="preserve">
-    <value>Проверять первое число в тексте и создавать срочное извещение, если значение</value>
+    <value>Проверять первое число в тексте и порождать срочное оповещение, если значение *</value>
   </data>
   <data name="ComparatorLabelOff" xml:space="preserve">
-    <value>Порог</value>
+    <value>Порог *</value>
   </data>
   <data name="ComparatorTypes" xml:space="preserve">
     <value>&gt; (больше, чем)
@@ -201,7 +201,7 @@
 Например: {CITY} на Reykjavik, {CURRENCY} на ZWL</value>
   </data>
   <data name="DefaultChannel" xml:space="preserve">
-    <value>Несрочные (которые должны быть тихими)</value>
+    <value>Несрочные уведомления (можно пропускать, индикация необязательна)</value>
   </data>
   <data name="DeleteMessage" xml:space="preserve">
     <value>Удалить выбранное оповещение?</value>
@@ -237,7 +237,7 @@
     <value>Запретить переход в спящий режим, пока приложение открыто</value>
   </data>
   <data name="LaunchMessage" xml:space="preserve">
-    <value>Служба оповещений находится в режиме ожидания. Нажмите на это сообщение, чтобы перейти к журналу</value>
+    <value>Служба оповещений находится в режиме наблюдения. Нажмите на это сообщение, чтобы перейти к журналу приложения</value>
   </data>
   <data name="LinkFieldLabel" xml:space="preserve">
     <value>Ссылка и
@@ -412,21 +412,25 @@
 • Смахните этот экран вправо, чтобы задать параметры службы и добавить новые ресурсы для наблюдения</value>
   </data>
   <data name="Tip02" xml:space="preserve">
-    <value>• Подробная инструкция по настройке службы доступна на YouTube. Смахните этот экран влево и выберите «руководство пользователя» для её просмотра.
+    <value>• Подробная инструкция по настройке службы доступна на YouTube. Смахните этот экран влево (до конца) и выберите «Справочные материалы» → «Видеоруководство проекта» для её просмотра.
 
-• Главный журнал уведомлений доступен на первой странице приложения. Он будет открываться при каждом следующем вызове приложения</value>
+• Главный журнал уведомлений доступен на первой странице приложения. Он будет открываться при каждом следующем вызове службы</value>
   </data>
   <data name="Tip03_1" xml:space="preserve">
-    <value>Внимание! Некоторые устройства требуют ручного разрешения на доступ в интернет (например, если активен режим экономии интернет-трафика). Проверьте его, если уведомления не будут работать</value>
+    <value>Внимание!
+
+• Некоторые устройства требуют ручного разрешения на доступ в интернет (например, если активен режим экономии интернет-трафика). Проверьте его, если уведомления не будут работать.
+
+• Также некоторые операционные системы содержат индивидуальные настройки экономии заряда батареи, очистки памяти и «закрепления» приложений в области уведомлений. Добавьте приложение в исключения и закрепите его, чтобы устройство не закрывало его принудительно в режиме ожидания</value>
   </data>
   <data name="Tip03_2" xml:space="preserve">
-    <value>Также ваше устройство требует ручного разрешения звуков, света и вибрации для уведомлений. При необходимости выберите их в настройках системы (при включённой фоновой службе – иначе настройки будут недоступны).
+    <value>Также ваше устройство требует ручного разрешения звуков, подсветки и вибрации для уведомлений. При необходимости выберите их в настройках системы. Фоновая служба должна быть включена, иначе настройки будут недоступны.
 
 Приложение создаёт два канала оповещений:
-• для срочных и смешанных (которые требуют индикации звуком или вибрацией);
-• для несрочных (которые можно оставить без индикации).
+• для срочных уведомлений (которые требуют индикации);
+• для несрочных уведомлений (которые можно пропускать).
 
-Разделение по каналам определяется настройками «Только срочные уведомления» и «Порог»</value>
+Не забудьте установить для них подходящие звуки</value>
   </data>
   <data name="Tip04_1" xml:space="preserve">
     <value>Эта кнопка позволяет применить изменения, выполненные ниже, к текущему выбранному уведомлению</value>
@@ -438,7 +442,7 @@
     <value>Эта кнопка позволяет выбрать уведомление для настройки</value>
   </data>
   <data name="Tip04_13" xml:space="preserve">
-    <value>Если этот флажок включён, фоновая служба останется активной, когда приложение будет закрыто или свёрнуто. Это позволяет быстрее вызывать приложение при необходимости (через закреплённое оповещение), а также видеть число непрочитанных записей в журнале</value>
+    <value>Если этот флажок включён, фоновая служба останется активной, когда приложение будет закрыто или свёрнуто. Это позволяет быстрее вызывать его при необходимости (через закреплённое оповещение), а также видеть число непрочитанных записей в журнале</value>
   </data>
   <data name="Tip04_15" xml:space="preserve">
     <value>В некоторых случаях нужный участок веб-страницы оказывается на ней не первым, который ограничен заданными маркерами. Это поле позволяет указать, какое именно вхождение целевого участка (от начала страницы) следует отображать</value>
@@ -450,24 +454,15 @@
     <value>Эта кнопка позволяет поделиться настройками уведомлений</value>
   </data>
   <data name="Tip04_20" xml:space="preserve">
-    <value>Эта функция позволяет установить числовой порог. Он будет сравниваться с первым числом в каждом полученном тексте с использованием указанного метода сравнения. Если новый текст соответствует условию, приложение отобразит специальное предупреждение.
+    <value>Эта функция позволяет установить числовой порог. Он будет сравниваться с первым числом в каждом полученном тексте с использованием указанного метода сравнения. Если новый текст соответствует условию, приложение отобразит срочное уведомление.
 
 Также возможно отображение уведомления только при соблюдении этого условия</value>
-  </data>
-  <data name="Tip04_21" xml:space="preserve">
-    <value>Частота обновления теперь настраивается для каждого уведомления отдельно. Проверьте её перед запуском фонового опроса</value>
   </data>
   <data name="Tip04_22" xml:space="preserve">
     <value>Эти переключатели позволяют указать, какие способы индикации следует использовать приложению при появлении непрочитанных элементов</value>
   </data>
-  <data name="Tip04_23" xml:space="preserve">
-    <value>Этот переключатель позволяет отключить индикацию для несрочных оповещений. Если он неактивен, все оповещения обрабатываются как смешанные (имеют индикацию)</value>
-  </data>
   <data name="Tip04_25" xml:space="preserve">
     <value>Этот переключатель позволяет экрану оставаться активным, пока Вы читаете тексты уведомлений (т. е. пока приложение открыто)</value>
-  </data>
-  <data name="Tip04_3" xml:space="preserve">
-    <value>Эта кнопка позволяет добавить новое уведомление с настройками, представленными выше</value>
   </data>
   <data name="Tip04_4" xml:space="preserve">
     <value>Эта кнопка позволяет удалить выбранное уведомление</value>
@@ -490,7 +485,10 @@
     <value>Обновление шаблонов завершено</value>
   </data>
   <data name="UrgentChannel" xml:space="preserve">
-    <value>Срочные и смешанные (где индикация обязательна)</value>
+    <value>Срочные уведомления (требуют особого внимания, индикация обязательна)</value>
+  </data>
+  <data name="UrgentTip" xml:space="preserve">
+    <value>* эти опции способны порождать срочные уведомления</value>
   </data>
   <data name="WizardFailure" xml:space="preserve">
     <value>Не удаётся определить подходящую разметку.
