--- a/src/android/UniNotifier_en_us.resx
+++ b/src/android/UniNotifier_en_us.resx
@@ -151,7 +151,7 @@
     <value>Viewer</value>
   </data>
   <data name="AvailabilityLabel" xml:space="preserve">
-    <value>Notify if source is unavailable</value>
+    <value>Notify if source is unavailable *</value>
   </data>
   <data name="BackgroundRequestInProgress" xml:space="preserve">
     <value>Please wait for the remaining notifications to respond...</value>
@@ -172,10 +172,10 @@
     <value>Select community:</value>
   </data>
   <data name="ComparatorLabel" xml:space="preserve">
-    <value>Check the first number in text and make urgent alert when value is</value>
+    <value>Check the first number in text and generate an urgent alert when value is *</value>
   </data>
   <data name="ComparatorLabelOff" xml:space="preserve">
-    <value>Threshold</value>
+    <value>Threshold *</value>
   </data>
   <data name="ComparatorTypes" xml:space="preserve">
     <value>&gt; (greater than)
@@ -201,7 +201,7 @@
 For example: {CITY} to Reykjavik, {CURRENCY} to ZWL</value>
   </data>
   <data name="DefaultChannel" xml:space="preserve">
-    <value>Non-urgent (that must be silenced)</value>
+    <value>Non-urgent notifications (can be silenced, indication is not required)</value>
   </data>
   <data name="DeleteMessage" xml:space="preserve">
     <value>Remove the selected notification?</value>
@@ -234,7 +234,7 @@ For example: {CITY} to Reykjavik, {CURRENCY} to ZWL</value>
     <value>Keep the screen on while app is opened</value>
   </data>
   <data name="LaunchMessage" xml:space="preserve">
-    <value>Notification service is in standby mode. Click on this message to go to the main log</value>
+    <value>Notification service is in supervision mode. Click on this message to go to the app’s log</value>
   </data>
   <data name="LinkFieldLabel" xml:space="preserve">
     <value>Link and
@@ -412,21 +412,27 @@ markup:</value>
 • Swipe this screen to the right to set up parameters of the service and add new web resources to watch</value>
   </data>
   <data name="Tip02" xml:space="preserve">
-    <value>• Detailed instructions for setting up the service are available on YouTube. Swipe this screen to the left and select the user guide for watching it.
+    <value>• Detailed instructions for setting up the service are available on YouTube. Swipe this screen to the left and select “Reference materials” → “Project videoguide” for watching it.
 
-• The main notifications log is available on the first page of the application. It will be opened on every further start of the app</value>
+• The main notifications log is available on the first page of the app. It will be opened on every further start of the service</value>
   </data>
   <data name="Tip03_1" xml:space="preserve">
-    <value>Warning! Some devices are requiring manual unlocking of internet access (f.e., in case of internet traffic saving mode) for the app. Check it if you will not get notifications</value>
+    <value>Warning!
+
+• Some devices are requiring manual unlocking of internet access (f.e., in case of internet traffic saving mode) for the app. Check it if you will not get notifications.
+
+• Also, some operating systems contain individual settings for saving battery power, clearing memory, and “pinning” apps to the notification area. Add the application to exceptions and pin it so that the device doesn’t force close it in standby mode</value>
   </data>
   <data name="Tip03_2" xml:space="preserve">
-    <value>Also, your device requires manual permission for sounds, lights and vibration for notifications. Select them in the system settings if necessary (when the background service is enabled – otherwise settings will be unavailable).
+    <value>Note!
+
+Your device requires manual permission for sounds, lights and vibration for notifications. Select them in the system settings if necessary. The background service should be enabled – otherwise settings will be unavailable.
 
 The application creates two notification channels:
-• for urgent and mixed (which require sound or vibration indication);
-• for non-urgent (which can be left without indication).
+• for urgent notifications (which require indication);
+• for non-urgent notifications (which can be left silent).
 
-The channeling is determined by the “Urgent notifications only” and “Threshold” settings</value>
+Don’t forget to set appropriate sounds for them</value>
   </data>
   <data name="Tip04_1" xml:space="preserve">
     <value>This button allows you to apply changes performed below to the currently selected notification</value>
@@ -438,7 +444,7 @@ The channeling is determined by the “Urgent notifications only” and “Thres
     <value>This button allows you to select notification for configuring</value>
   </data>
   <data name="Tip04_13" xml:space="preserve">
-    <value>If this switch is enabled, the background service will remain active when the app is closed or minimized. This allows you to quickly call the app when necessary (via a pinned notification) and see the quantity of unread records in the main log</value>
+    <value>If this switch is enabled, the background service will remain active when the app is closed or minimized. This allows you to quickly call it when necessary (via a pinned notification) and see the quantity of unread records in the main log</value>
   </data>
   <data name="Tip04_15" xml:space="preserve">
     <value>In some cases, the needed part of webpage is not the first on it, which is limited by the specified markers. This field allows you to specify which occurrence of the target area (from the top of the page) should be displayed</value>
@@ -450,24 +456,15 @@ The channeling is determined by the “Urgent notifications only” and “Thres
     <value>This button allows you to share settings of notifications</value>
   </data>
   <data name="Tip04_20" xml:space="preserve">
-    <value>This function allows you to set a numerical threshold. It will be compared with the first number in every obtained text using the specified comparison method. If the new text matches the condition, app will display a special warning.
+    <value>This function allows you to set a numerical threshold. It will be compared with the first number in every obtained text using the specified comparison method. If the new text matches the condition, app will display an urgent notification.
 
 It is also possible to display the notification only if this condition is met</value>
   </data>
-  <data name="Tip04_21" xml:space="preserve">
-    <value>The update rate is now configurable for each notification separately. Check it before running the background request</value>
-  </data>
   <data name="Tip04_22" xml:space="preserve">
-    <value>These switches allow you to specify which methods of indication the app should use when there is unread items. You can also disable indication for non-urgent notifications</value>
-  </data>
-  <data name="Tip04_23" xml:space="preserve">
-    <value>This switch allows you to turn off the indication for non-urgent notifications. If it is inactive, all news are processed as mixed (have an indication)</value>
+    <value>These switches allow you to specify which methods of indication the app should use when there are unread items</value>
   </data>
   <data name="Tip04_25" xml:space="preserve">
     <value>This switch keeps the screen active while you’re reading notifications texts (i. e. while the app is opened)</value>
-  </data>
-  <data name="Tip04_3" xml:space="preserve">
-    <value>This button allows you to add new notification with settings presented above</value>
   </data>
   <data name="Tip04_4" xml:space="preserve">
     <value>This button allows you to remove selected notification</value>
@@ -490,7 +487,10 @@ Please note that app adds links to information sources to notifications you shar
     <value>Updating of templates completed...</value>
   </data>
   <data name="UrgentChannel" xml:space="preserve">
-    <value>Urgent and mixed (when indication is required)</value>
+    <value>Urgent notifications (should be noticed, indication is required)</value>
+  </data>
+  <data name="UrgentTip" xml:space="preserve">
+    <value>* these options can generate urgent notifications</value>
   </data>
   <data name="WizardFailure" xml:space="preserve">
     <value>Unable to determine suitable markup.
